# Cubictests

./: README.md
cubicHecuba/: CMakeLists.txt  main.cpp
